syntax = "proto3";

package shape;

option go_package = "github.com/muzammilar/geomrpc/protos/shape";

import "google/protobuf/timestamp.proto";

message ShapeInfo {

  enum QuantityType {
    UNKNOWN_QUANTITY = 0;
    AREA = 1;
    VOLUME = 2;
    PERIMETER = 3;
  }

  enum ShapeType {
    UNKNOWN_SHAPE = 0;
    RECTANGLE = 1;
    CUBE = 2;
  }

  message Mesurement {
    QuantityType name = 1;
    double value = 2;
  }

  Identifier id = 1;
  ShapeType shape = 2;

  repeated Mesurement mesurements = 3;
  google.protobuf.Timestamp timestamp = 4;

}

message Cuboid {
  Identifier id = 1;
  int64 length = 2;
  int64 width = 3;
  int64 height = 4;
}

message Rectangle {
  Identifier id = 1;
  int64 length = 2;
  int64 width = 3;
}

message Identifier {
  int64 id = 1; // unique ID of a shape
  string name = 2; // name of the shape, can be null or empty, doesn't need to be unique
}

message PlanarCoordinates {
  Identifier id = 1;
  ShapeInfo.ShapeType shape = 2;

  int64 x = 3;  // length is x-axis
  int64 y = 4;  // width is y-axis
  int64 z = 5;  // height is z-axis

}
