syntax = "proto3";

package shapecalc;

option go_package = "github.com/muzammilar/geometric-shapes/protos/shapecalc";

import "shape/shape.proto";


// Interface exported by the server.
service Geometry {
    // A simple RPC.
    //
    // Obtains the feature at a given position.
    //
    // A mesurement with an empty name is returned if there's no field at the given
    // position.
    rpc ComputeRectangleArea(shape.Rectangle) returns (shape.ShapeInfo.Mesurement) {}

    // A server-to-client streaming RPC.
    //
    // Obtains all the Planar Coordinate (dimensions) available within the given Rectangle.  Results are
    // streamed rather than returned at once (e.g. in a response message with a
    // repeated field), as the rectangle may cover a large area and contain a
    // huge number of features.
    rpc ListRectangleCoordinates(shape.Rectangle) returns (stream shape.PlanarCoordinates) {}

}

// Interface exported by the server.
service Info {
    // A simple RPC.
    rpc GetRectangleInfo(shape.Rectangle) returns (shape.ShapeInfo) {}

    rpc GetCuboidInfo(shape.Cuboid) returns (shape.ShapeInfo) {}

}
